
	* Fixed bug #12455: OpenID authentication does not work with PHP 5.3
	* Fixed bug #12054: PHP5.3-Warning about strcmp() parameters in view_help.php (thanks to Stefan Geith)
	* Fixed bug #12195: Renaming write protected file issues a php warning
	* Fixed bug #12099: Replace "Warning: filemtime(): stat failed" with a nice error message (thanks to Steffen Gebert)

2009-11-17  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #12612: Backend Login-Popup not working
	* Follow-up to bugfix #12612: Removed reference operators for objects and code cleanup
	* Fixed bug #12517: Password change in User tools -> User setup impossible if rsaauth and saltedpassword are installed
	* Fixed bug #12608: User settings module reports changed password and settings if there was no change at all

2009-11-17  Benjamin Mack  <benni@typo3.org>

	* Commited test case for #12244: Improve locallangXMLOverride feature (Thanks to Steffen Gebert)
	  This changes the LLoverride feature to $GLOBALS['TYPO3_CONF_VARS']['SYS']['locallangXMLOverride'] as an array

2009-11-17  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #12611: Add preRenderHook in pageRenderer
	* Fixed bug #12610: Inconsistent naming of "includeFooterJS"
	* Fixed bug #10119: Broken fe_adminLib.inc
	* Fixed bug #12616: Set recycler height dynamic
	* Fixed bug #12624: Unreplaced marker in login screen of classic skin

2009-11-17  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #12619: htmlArea RTE: JS error raised by spell checker
	* Fixed bug #12622: htmlArea RTE: Incorrect behaviour of last item of list in gecko browsers

2009-11-16  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #12621: Validation issue in sysext scheduler: endPage is called twice
	* Fixed bug #12620: Validation issue in web functions wizard new page: End tag for input omitted
	* Fixed bug #12617: Validation issue in sysext lowlevel: End tag for input omitted

2009-11-16  Steffen Kamper  <info@sk-typo3.de>
