@@ -4,6 +4,7 @@
 	* Fixed bug #12054: PHP5.3-Warning about strcmp() parameters in view_help.php (thanks to Stefan Geith)
 	* Fixed bug #12195: Renaming write protected file issues a php warning
 	* Fixed bug #12099: Replace "Warning: filemtime(): stat failed" with a nice error message (thanks to Steffen Gebert)
+	* Fixed bug #11937: Do not show E_DEPRECATED messages on productive systems
 
 2009-11-17  Oliver Hader  <oliver@typo3.org>
 
